--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -1987,7 +1987,13 @@
    "source": [
     "**Question 2:**  Compare and contrast the possible advantages and disadvantages of the various model selectors implemented.\n",
     "\n",
-    "**Answer 2:**"
+    "**Answer 2:**  \n",
+    "CV selector strongly depends on number of samples available. Since the method estimates models by random sampling, it performs well when there is plenty of data available for sampling, and underperform when the data is limited.  \n",
+    "\n",
+    "BIC uses a penalty term which helps to prevent overfitting. Advantages of the method are computation speed and ease of implementation. On the other hand, the quality of assessment will decrease with the very large datasets.\n",
+    "\n",
+    "DIC method selects the model which is less likely to belong to competing categories. In general, the method demonstrates better performance. The disadvantage is a longer pre-processing time, which may become a blocking factor on large datasets. \n",
+    "\n"
    ]
   },
   {
@@ -2388,7 +2394,24 @@
    "source": [
     "**Question 3:**  Summarize the error results from three combinations of features and model selectors.  What was the \"best\" combination and why?  What additional information might we use to improve our WER?  For more insight on improving WER, take a look at the introduction to Part 4.\n",
     "\n",
-    "**Answer 3:**"
+    "**Answer 3:**\n",
+    "\n",
+    "The chart summrizes the performance of features and selectors in terms of WER.\n",
+    "\n",
+    "\n",
+    "![WER](resultsWER.PNG)\n",
+    "\n",
+    "I’ve tested all possible combinations of features and model selectors. It’s visible on the chart above that, in general, DIC demonstrates better performance. \n",
+    "Average WERs are:\n",
+    "-\tDIC: 0.57\n",
+    "-\tBIC: 0.59\n",
+    "-\tCV:  0.64\n",
+    "\n",
+    "In general, polar features performed better than other, however, the best combination is DIC and custom features (WER 0.53). I would attribute such a result to the fact that the custom set contains normalized features (adjusted to the personal differences of speakers). \n",
+    "\n",
+    "One of the ways to improve the recognition quality is to use Statistical Language Models (SLM). This method suggests considering probability of appearance of a word next to a preceding word (or set of words). One of the instances of SLM is “n-gram” statistics.  \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2405,7 +2428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2418,7 +2441,7 @@
      "text": [
       "..\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 47.093s\n",
+      "Ran 2 tests in 59.397s\n",
       "\n",
       "OK\n"
      ]
@@ -2429,7 +2452,7 @@
        "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
